[project]
name = "toml-decouple"
version = "0.8.1"
description = "TOML powered .env file configuration and secrets"
readme = "README.md"
authors = [
  { name = "Baptiste Darthenay", email = "baptiste.darthenay@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: aiohttp",
  "Framework :: Django",
  "Framework :: Flask",
  "Framework :: Wagtail",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
db = ["dj-database-url>=3.0.0"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest-cov>=6.2.1",
  "pytest-django>=4.11.1",
  "pytest-mock>=3.14.1",
  "pytest>=8.4.1",
  "ruff>=0.12.4",
  "zuban>=0.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
