[project]
name = "toml-decouple"
version = "0.11.2"
description = "TOML powered .env file configuration and secrets"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [
  { name = "Baptiste Darthenay", email = "baptiste.darthenay@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: aiohttp",
  "Framework :: Django",
  "Framework :: Flask",
  "Framework :: Wagtail",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
db = ["dj-database-url>=3.0.0"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "dj-database-url>=3",
  "pytest-cov>=6",
  "pytest-django>=4",
  "pytest-mock>=3",
  "pytest>=8",
  "ruff>=0.15",
  "toml-decouple[db]",
  "zuban>=0.6",
]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
addopts = "-rx --doctest-modules --cov-report=xml  --cov-report=html --cov-report=term:skip-covered --cov=toml_decouple"

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
toml-decouple = { workspace = true }
